--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,10 @@
   border-lightGray font-roboto text-sm leading-[22px] font-normal text-customBlack;
 }
 
+.disabledPaginationButton {
+  @apply text-lightGray pointer-events-none;
+}
+
 .paginationDotButton {
   @apply min-h-8 h-8 max-w-8 w-full px-2 border-none font-roboto text-sm leading-8
    font-normal text-center tracking-[2px] text-black25;
@@ -81,6 +85,36 @@
   @apply border-blue font-medium text-blue;
 }
 
-/* .paginationButton:active {
-  @apply border-blue font-medium text-blue bg-white;
-} */
+.navButton {
+  @apply transition-opacity ease-out duration-300 hover:opacity-80;
+}
+
+.currentRecipeContainer {
+  grid-template-areas:
+    "cuisine prepTime"
+    "tags instructions"
+    "calories instructions"
+    "servings instructions"
+    "description instructions";
+  grid-template-columns: repeat(2, minmax(0, 465px));
+  grid-template-rows: repeat(5, minmax(0, max-content));
+}
+
+.instructionStep {
+  position: relative;
+  padding-left: 16px;
+}
+
+.instructionStep::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  box-sizing: border-box;
+  border: 2px solid rgb(24, 144, 255);
+  border-radius: 100px;
+  background: rgb(255, 255, 255);
+  width: 10px;
+  height: 10px;
+}
