--- a/src/index.css
+++ b/src/index.css
@@ -97,7 +97,7 @@
     "servings instructions"
     "description instructions";
   grid-template-columns: repeat(2, minmax(0, 465px));
-  grid-template-rows: repeat(5, minmax(0, max-content));
+  grid-template-rows: repeat(4, max-content) auto;
 }
 
 .instructionStep {
